<resources>
    <string name="app_name">Student Registration</string>
    <string name="add">ADD</string>
    <string name="list">LIST</string>
    <string name="enter_your_email">Email</string>
    <string name="password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="enter_your_username">Username</string>
    <string name="enter_your_age">Age</string>
    <string name="or">-------------- OR --------------</string>
    <string name="student_name">Student Name</string>
    <string name="student_registration">Student Registration</string>
    <string name="student_diary">Student Diary</string>
    <string name="update">UPDATE</string>
    <string name="username">Full Name</string>
    <string name="USN">Student Number</string>
    <string name="email">E-mail</string>
    <string name="mobile">Mobile Number</string>
    <string name="address">Address</string>
    <string name="StudentReg">Student Registration</string>
    <string name="registration">REGISTRATION</string>
    <string name="studentlist">ALL STUDENTS</string>
    <string name="Home">HOME</string>


</resources>