<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".Signup.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/custom_60dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/custom_30dp"
            android:gravity="center_horizontal"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="@dimen/custom_text_60sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/custom_40dp"
            android:backgroundTint="@color/black"
            android:hint="@string/enter_your_username" />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="@dimen/custom_40dp"
            android:inputType="number"
            android:backgroundTint="@color/black"
            android:hint="@string/enter_your_age" />

        <EditText
            android:id="@+id/emailAdress"
            android:layout_width="match_parent"
            android:layout_height="@dimen/custom_40dp"
            android:backgroundTint="@color/black"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_your_email" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/custom_40dp"
            android:layout_below="@id/emailAdress"
            android:backgroundTint="@color/black"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnRegisterUser"
            android:layout_width="match_parent"
            android:layout_height="@dimen/custom_40dp"
            android:layout_marginTop="@dimen/custom_20dp"
            android:text="@string/register" />
    </LinearLayout>
</RelativeLayout>